# egui-stylist

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
egui-stylist/: Cargo.toml  README.md
egui-stylist-native/: Cargo.toml  README.md
egui-stylist-native/src/: app.rs  lib.rs  main.rs
egui-stylist/src/: app.rs  lib.rs  main.rs
egui-stylist/src/views/: colors.rs  fonts.rs  mod.rs  preview.rs  shape.rs  spacing.rs  text.rs
egui-stylist/src/views/preview/: widget_gallery.rs
egui-theme/: CHANGELOG  Cargo.toml  README.md  build.rs
egui-theme/src/: lib.rs  migrations.rs
egui-theme/src/tests/: de.rs  mod.rs  ser.rs
egui-theme/src/tests/test-themes/: custom-theme.ron  default.ron  incorrect_fields.ron  incorrect_parameters.ron  missing_data.ron
egui-theme/src/theme/: fonts.rs  mod.rs  style.rs
src/: app.rs  lib.rs  main.rs
src/views/: colors.rs  fonts.rs  mod.rs  preview.rs  shape.rs  spacing.rs
src/views/preview/: widget_gallery.rs
