[package]
name = "egui-stylist-native"
version = "0.2.0"
authors = ["Jacobsky"]
edition = "2018"
description="The native application for egui-stylist"
license="MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Standalone application
[[bin]]
name = "egui-stylist-native"
path = "src/main.rs"

# TODO: Enable WASM32 builds for this
# WASM build
# [lib]
# name = "egui_stylist_web"
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[dependencies]
egui-theme = { path = "../egui-theme" }
egui-stylist = { path = "../egui-stylist"}
# Gives us egui, epi and web+native backends
eframe = "0.18"
# Required for font serialization
base64 = "0.13.0" 
rfd = "0.8"
ron = "0.7.0"
serde = { version = "1", features = ["derive"] }
futures = "0.3"

[features]
default = []
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

