[package]
name = "egui-stylist"
version = "0.1.1"
authors = ["Jacobsky"]
edition = "2018"
description="An embeddable theme editor for egui."
license="MIT"
readme = "README.md"


# Embeddable application library
[lib]
name = "egui_stylist"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
egui-theme = { version = "0.1.1", path = "../egui-theme"}
# Gives us egui, epi and web+native backends
egui = { version = "0.15.0", features = ["serialize"]}
# Required for font serialization
base64 = "0.13.0"
# Required for serialization
serde = { version = "1", features = ["derive"] }
