[package]
name = "egui-stylist"
version = "0.2.0"
authors = ["Jacobsky"]
edition = "2018"
description="An embeddable theme editor for egui."
license="MIT"
readme = "README.md"


# Embeddable application library
[lib]
name = "egui_stylist"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
egui-theme = { version = "0.2", path = "../egui-theme"}
egui = { version = "0.21", default-features = false, features = ["serde"]}
# Required for font serialization
base64 = "0.13.0"
# Required for serialization
serde = { version = "1", features = ["derive"] }
