[package]
name = "egui-theme"
version = "0.1.1"
authors = ["Jacobsky"]
edition = "2018"
description="A standalone serializable theme container for use with Egui."
license="MIT"
readme = "README.md"


[lib]
name = "egui_theme"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# This requires egui to work
egui = { version = "0.15.0", features = ["serialize"]}
# This is for adding the font data to the code
base64 = "0.13.0" 
# This is used for serialization
serde = { version = "1", features = ["derive"] }

[features]
migrate_14_to_15 = []