[package]
name = "egui-theme"
version = "0.2.0"
authors = ["Jacobsky"]
edition = "2021"
description="A standalone serializable theme container for use with Egui."
license="MIT"
readme = "README.md"


[lib]
name = "egui_theme"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# This requires egui to work
egui = { version = "0", features = ["serialize"]}
# This is used for serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cargo-lock = "8"