[package]
name = "egui-theme"
version = "0.2.0"
authors = ["Jacobsky"]
edition = "2021"
description="A standalone serializable theme container for use with Egui."
license="MIT"
readme = "README.md"

[lib]
name = "egui_theme"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version = "0.21", default-features = false, features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ron = "0.7"